# PubMiner-webui

./: .env.example  .gitignore  DOCUMENTATION.md  PubMiner_Blueprint_Optimized.md  README.md  package.json  pnpm-lock.yaml  start_backend.ps1
PubMiner/: .env.example  README.md  api_server.py  main.py  pyproject.toml  requirements.txt  test_pmids.txt
PubMiner/config/: custom_fields.yaml  default.yaml
PubMiner/pubminer/: __init__.py
PubMiner/pubminer/cli/: __init__.py  main.py
PubMiner/pubminer/core/: __init__.py  config.py  exceptions.py  extraction_tasks.py  logger.py  state.py  task_store.py
PubMiner/pubminer/downloader/: __init__.py  models.py  oa_pdf.py  oa_pdf_models.py  pmc_bioc.py  section_parser.py
PubMiner/pubminer/exporter/: __init__.py  column_mapping.py  csv_writer.py
PubMiner/pubminer/extractor/: __init__.py  zhipu_client.py
PubMiner/pubminer/extractor/schemas/: __init__.py  base_info.py  custom.py
PubMiner/pubminer/fetcher/: __init__.py  models.py  pubmed_client.py
scripts/: benchmark_oa_pdf.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/pubminer/: extraction-setup-section.tsx  footer.tsx  header.tsx  hero-section.tsx  results-section.tsx  search-results-section.tsx  search-section.tsx  tasks-section.tsx  workflow-section.tsx
src/components/ui/: switch.tsx
src/lib/: api.ts  pubmed-fields.ts  store.ts
